using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class Constan
{
    public const string ANIM_IDLE = "idle";
    public const string ANIM_ATTACK = "attack";
    public const string ANIM_RUN = "run";
    public const string ANIM_DANCE = "dance";
    public const string ANIM_DEAD = "dead";
    public const string TAG_NAME_BOT = "Bot";
    public const string TAG_NAME_PLAYER = "Player";



    //public static PoolType ConvertWeaponTypeToObjectType(WeaponType weaponType)
    //{
    //    return weaponType switch
    //    {
    //        WeaponType.Axe => PoolType.Axe,
    //        WeaponType.Boomerang => PoolType.Boomerang,
    //        WeaponType.Cream => PoolType.Cream,
    //        _ => PoolType.None,
    //    };
    //}
}
