using System.Collections;
using System.Collections.Generic;
using System.Threading;
using UnityEngine;

public class Constan
{
    public const string ANIM_IDLE = "idle";
    public const string ANIM_ATTACK = "attack";
    public const string ANIM_RUN = "run";
    public const string ANIM_DANCE = "dance";
    public const string ANIM_DEAD = "dead";
    public const string TAG_BOT = "Bot";
    public const string TAG_PLAYER = "Player";
    public const string TAG_OBSTACLE = "Obstacle";
    public const string SAVE_FILE_NAME = "savegame.ss";

    public const string BACKGROUND_VOLUME = "BackgroundVolume";
    public const string EFFECT_VOLUME = "EffectVolume";
    public const string ATTACK_MUSIC_NAME = "Nem vu khi";
    public const string BACKGROUND_MUSIC_NAME = "Nhac nen";
    public const string DEATH_MUSIC_NAME = "Chet 3";
    public const string LOSE_MUSIC_NAME = "Lose";
}
